@@ -12,3 +12,8 @@ Version 0.1
  + Added data saving. Logging in/out will not change your status
  + Added Metrics
  + Added PVP handling, Neutral players can't attack each other
+ + Added chat and death-message functionality, Assassins' names will be hidden
+ + Added command to check if you're an Assassin and for how long
+ + Added command to spawn mask(s)
+ + Added command to refresh cooldown time
+ + Added command to deactivate assassin mode
